--- a/index.html
+++ b/index.html
@@ -10,10 +10,6 @@
         integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
         crossorigin=""/>
 
-    <!-- Leaflet Marker Cluster CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.css" />
-    <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.Default.css" />
-
     <!-- Custom CSS -->
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -22,9 +18,8 @@
     <header>
         <div class="header-content">
             <img src="assets/images/bird-silhouette.svg" alt="Bird" class="header-icon">
-            <h1>Birds of NYC</h1>
+            <h1>Last 7 Days of Rare Bird Sightings in New York City.</h1>
         </div>
-        <p class="subtitle">Rare Bird Sightings in New York City</p>
     </header>
 
     <!-- Map Container -->
@@ -42,12 +37,6 @@
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
         integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
         crossorigin=""></script>
-
-    <!-- Leaflet Marker Cluster JS -->
-    <script src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"></script>
-
-    <!-- Leaflet Heat JS -->
-    <script src="https://unpkg.com/leaflet.heat@0.2.0/dist/leaflet-heat.js"></script>
 
     <!-- Custom JS -->
     <script src="map.js"></script>
