--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
         <div class="header-content">
             <img src="assets/images/bird-silhouette.svg" alt="Bird" class="header-icon">
-            <h1>Last 7 Days of Rare Bird Sightings in New York City.</h1>
+            <h1>Last 7 Days of Rare Bird Sightings in New York</h1>
         </div>
     </header>
 
